tests/cases/compiler-development/artifact/errors/diagnostic-private-enum-case.diagnostic
diagnostic error code=M0001 family=module message="enum case 'Hidden::A' is not public" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/modules/errors/private-module-enum-case.ari" display="tests/cases/modules/errors/private-module-enum-case.ari" bytes=202
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/private-module-enum-case.ari" line=14 column=5 end_line=14 end_column=11 byte_start=159 byte_end=165 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/private-module-enum-case.ari:14:5\n    |\n 14 |     Hidden::A => {\n    |     ^^^^^^"
